// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer render 1`] = `
<DocumentFragment>
  <div
    class="footer"
  >
    <a
      class="footer__menu"
      href="/projects"
      title="Проекты"
    >
      <svg
        class="footer__menu-icon"
      >
        <use
          xlink:href="#icon-list"
        />
      </svg>
    </a>
    <a
      class="footer__menu"
      href="/filters"
      title="Фильтры"
    >
      <svg
        class="footer__menu-icon"
      >
        <use
          xlink:href="#icon-filter"
        />
      </svg>
    </a>
    <a
      class="footer__menu"
      href="/settings"
      title="Настройки"
    >
      <svg
        class="footer__menu-icon"
      >
        <use
          xlink:href="#icon-settings"
        />
      </svg>
    </a>
    <div
      class="footer__menu"
      data-testid="fullscreen-btn"
    >
      <svg
        class="footer__menu-icon"
      >
        <use
          xlink:href="#icon-fullscreen"
        />
      </svg>
    </div>
    <div
      class="footer__reload"
      data-testid="reload-btn"
    >
      <svg
        class="footer__menu-icon"
      >
        <use
          xlink:href="#icon-reload"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Footer with preloader 1`] = `
<DocumentFragment>
  <div
    class="footer"
  >
    <a
      class="footer__menu"
      href="/projects"
      title="Проекты"
    >
      <svg
        class="footer__menu-icon"
      >
        <use
          xlink:href="#icon-list"
        />
      </svg>
    </a>
    <a
      class="footer__menu"
      href="/filters"
      title="Фильтры"
    >
      <svg
        class="footer__menu-icon"
      >
        <use
          xlink:href="#icon-filter"
        />
      </svg>
    </a>
    <a
      class="footer__menu"
      href="/settings"
      title="Настройки"
    >
      <svg
        class="footer__menu-icon"
      >
        <use
          xlink:href="#icon-settings"
        />
      </svg>
    </a>
    <div
      class="footer__menu"
      data-testid="fullscreen-btn"
    >
      <svg
        class="footer__menu-icon"
      >
        <use
          xlink:href="#icon-fullscreen"
        />
      </svg>
    </div>
    <div
      class="footer__reload"
      data-testid="reload-btn"
    >
      <img
        class="footer__menu-icon"
        src="test-file-stub"
      />
    </div>
  </div>
</DocumentFragment>
`;
